--- a/final.html
+++ b/final.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Phase</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Final Phase</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>You’ve reached the end. No turning back now.</h1>
-        <div id="buttons">
-            <button onclick="showTruth()" class="final-btn">Truth</button>
-            <button onclick="showGift()" class="final-btn">Gift</button>
-        </div>
-        <p id="result" class="hidden"></p>
+  <div class="container">
+    <h1>You’ve reached the end. No turning back now.</h1>
+    <div id="buttons">
+      <button id="truth" class="final-btn">Truth</button>
+      <button id="gift" class="final-btn">Gift</button>
     </div>
-    <script src="script.js"></script>
+    <p id="result" class="hidden"></p>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
